# Fourmis

./: .gitignore
compilobasic/: Makefile  README.md  antsc  byz.strat  cervo.brain  kill_test.brain  kill_test.map  nop.brain  silly.strat  test.brain  test.strat  test2.brain  test3.strat  testkill.strat
compilobasic/_build/: .db  .digest-db  log
compilobasic/_build/default/: antsc.dune-package  antsc.install
compilobasic/_build/default/.dune/: configurator  configurator.v2
compilobasic/_build/default/parser_generator/src/: META.simple-parser  simple-parser-test.dune-package  simple-parser-test.install  simple-parser-test.opam  simple-parser.dune-package  simple-parser.install  simple-parser.opam
compilobasic/_build/default/parser_generator/src/lib/: simpleParser.cma  simpleParser.cmxa  simpleParser.cmxs  simpleParser.ml-gen
compilobasic/_build/default/src/: antsc.ml  ast.ml  ast.mli  lexer.ml  lexer.mli  parser.ml
compilobasic/_build/default/src/.antsc.eobjs/: antsc.impl.d  ast.impl.d  ast.intf.d  lexer.impl.d  lexer.intf.d  parser.impl.d  parser.intf.d
compilobasic/_build/default/src/.antsc.eobjs/byte/: antsc.cmi  antsc.cmo  antsc.cmt  ast.cmi  ast.cmti  lexer.cmi  (+3 more)
compilobasic/_build/default/src/.merlin-conf/: exe-antsc
compilobasic/maps/: simple.map  test.map
compilobasic/src/: antsc.ml  ast.ml  ast.mli  lang.grammar  lexer.ml  lexer.mli  parser.ml  parser.mli
mechants-main/: Cargo.toml  README.md
mechants-main/brains/: cervo.brain  random_search.brain
mechants-main/src/: ant.rs  game.rs  instruction.rs  lib.rs  main.rs  map.rs  tile.rs
(+107 files in other folders)
