[package]
name = "mechants"
version = "0.1.0"
edition = "2021"
authors = ["Aloïs R. <alois.rautureau@ens-rennes.fr>"]
description = "Simulator for the Sinfourmis tournament of the Sinfonie association"
license = "MIT"

[dependencies]
clap =  { version = "4.4.6", features = ["derive"] }
thiserror = "1.0.49"
rand = { version = "0.8.5", features = ["small_rng"] }
bincode = "2.0.0-rc.3"
colored = "2.0.4"
itertools = "0.12.0"
crossterm = "0.27"

[features]
display = ["dep:bevy"]

[dependencies.bevy]
version = "0.12"
default-features = false
optional = true
features = [
  "wayland",
  "multi-threaded",
  "bevy_winit",
  "bevy_asset",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "default_font",
  "png",
  "x11",
  "webgl2",
]

[profile.release]
strip = true
panic = 'abort'

[profile.dev]
opt-level = 1
overflow-checks = false
incremental = true

[profile.dev.package."*"]
opt-level = 3
